# cp-prototype

./: .env.example  .gitignore  .pre-commit-config.yaml  .rooignore  .roomodes  ARCHITECTURE.txt  PATTERNS.txt  README.md  bash.exe.stackdump  docker-compose.yaml  nginx.conf  reverse-proxy.conf
backend/: .env.example  .mypy.ini  Dockerfile  README.md  alembic.ini  architectural_overview.md  database_design.md  implementation_plan.md  pipeline-tags.yaml  prompts.yaml  pyproject.toml  requirements.txt  ruff.toml
backend/app/: __init__.py  config.py  lifecycle.py  logging_config.py  main.py  run_tests.sh
backend/app/api/: __init__.py  dependencies.py  schemas.py
backend/app/api/routers/: __init__.py  agent.py  chat.py  health.py  tasks.py  user.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 283fc05d981d_fix_wrong_back_populates.py  8f350bbc5e33_initial_database_schema.py  b3f65c62d3b1_add_username_to_user_model.py  fd58ac4f60fb_initial_schema.py  (+1 more)
backend/app/db/models/: __init__.py  base.py  chat.py  job.py  user.py  user_video.py  video.py
backend/app/features/: __init__.py
backend/app/features/auth/: __init__.py  supertokens_config.py
backend/app/features/chat/: chat_pipeline.py  dependencies.py  schemas.py
backend/app/features/voice_dna/: __init__.py  pipelines.py  service.py  tasks.py
backend/app/schemas/: user.py
backend/app/services/: chat_service.py  prompt_service.py  user_service.py
backend/app/shared/: __init__.py  constants.py  exceptions.py  schemas.py  utils.py
backend/app/shared/clients/: __init__.py
backend/app/shared/constants/: __init__.py  constants.py
backend/app/shared/exceptions/: __init__.py  exceptions.py
backend/app/shared/tools/: general.py
backend/app/worker/: README.md  __init__.py  settings.py  tasks.py
backend/docs/: background_jobs.md  database_design.md
backend/tests/: __init__.py  conftest.py  factories.py
backend/tests/ai/: test_pipeline_builder.py  test_tools.py
backend/tests/ai/agents/: test_chat_agent.py
backend/tests/api/routers/: __init__.py  test_chat.py  test_health.py
backend/tests/models/: test_job.py  test_script.py  test_user.py
backend/tests/services/: test_prompt_service.py
frontend/: README.md  (+11 more)
(+68 files in other folders)
